# Pyponent

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  FEATURE.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/hooks/: index.html
api/html/: index.html
api/router/: index.html
api/tailwind/: index.html
docs/: index.md
docs/api/: hooks.md  html.md  router.md  tailwind.md
docs/getting-started/: installation.md  quickstart.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/pyponent/: core.py  diff.py  hooks.py  html.py  router.py  web.py
styles/: sample.css
tests/: test_core.py  test_diff.py
